# ejercicio-preparcial-MelissaBelalcazar5

./: CMakeLists.txt  main.cpp
ejercicio1/: mainEjercicio1.cpp
ejercicio2/: mainEjercicio2.cpp
ejercicio3/: mainEjercicio3.cpp
ejercicio4/: mainEjercicio4.cpp
ejercicio5/: mainEjercicio5.cpp
ejercicio6/: mainEjercicio6.cpp
