cmake_minimum_required(VERSION 3.26)
project(ejercicio_preparcial_MelissaBelalcazar5)

set(CMAKE_CXX_STANDARD 17)

add_executable(ejercicio1 ejercicio1/mainEjercicio1.cpp)
add_executable(ejercicio2 ejercicio2/mainEjercicio2.cpp)
add_executable(ejercicio3 ejercicio3/mainEjercicio3.cpp)
add_executable(ejercicio4 ejercicio4/mainEjercicio4.cpp)
add_executable(ejercicio5 ejercicio5/mainEjercicio5.cpp)
add_executable(ejercicio6 ejercicio6/mainEjercicio6.cpp)

