cmake_minimum_required(VERSION 3.26)
project(ejercicio_preparcial_MelissaBelalcazar5)

set(CMAKE_CXX_STANDARD 17)

add_executable(ejercicio_preparcial_MelissaBelalcazar5
        main.cpp
        ejercicio1/mainEjercicio1.cpp
        ejercicio2/mainEjercicio2.cpp
        ejercicio3/mainEjercicio3.cpp
        ejercicio4/mainEjercicio4.cpp
        ejercicio5/mainEjercicio5.cpp
        ejercicio6/mainEjercicio6.cpp)


